# easy_py

./: README.md  pyproject.toml  setup.py  test.py
easy_functions/: _init_.py  utils.py
src/easy_programming_tools/: tools.py
