[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easy_programming_lib"
version = "0.0.1"
authors = [
  { name="Lars Desmet", email="desmetlars5@gmail.com" },
]
description = "A collection of simple functions that make programming tasks easier."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourusername/easy_programming_lib"
Issues = "https://github.com/yourusername/easy_programming_lib/issues"
